--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -22,7 +22,7 @@
     <br>
     <label for="email">Email</label>
     <input type="text" th:field="*{email}" id="email" placeholder="Email">
-    <p th:text="${emailError}" ></p>
+    <p th:text="${emailError}" style="color: darkred" ></p>
 
     <br>
     <br>
