--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,16 @@
   <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
+
 <div class="container">
+  <fieldset>
   <form class="form-signin" method="post" action="/login">
-    <h2 class="form-signin-heading">Please sign in</h2>
+    
+    <div  th:if="${param.logout}" class="alert alert-info" role="alert">Logout successfully</div>
+  
+    <div  th:if="${param.eroor}" class="alert alert-danger" role="alert">Email  or  password incorrect</div>
+    
+    <h2 class="form-signing-heading">Please sign in</h2>
     <p>
       <label for="username" class="sr-only">Username</label>
       <input type="text" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
@@ -23,6 +30,8 @@
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
     </p>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+
   </form>
+  </fieldset>
 </div>
 </body></html>
