--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -17,11 +17,11 @@
     <br>
     <br>
     <label for="age">Age</label>
-    <input type="number" th:field="*{age}" id="age" placeholder="Age">
+    <input type="number" th:field="*{age}" id="age" th:placeholder="Age" th:value="Age" autocomplete="off">
     <br>
     <br>
     <label for="email">Email</label>
-    <input type="text" th:field="*{email}" id="email" placeholder="Email">
+    <input type="text" th:field="*{email}" id="email" th:placeholder="Email">
     <p th:text="${emailError}" style="color: darkred" ></p>
 
     <br>
