--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -42,7 +42,7 @@
             </td>
             <td>
 
-                <form th:method="post" th:action="@{/admin/delete/{id}(id=${user.id})}">
+                <form th:method="DELETE" th:action="@{/admin/delete/{id}(id=${user.id})}">
                     <input type="submit" value="Delete">
                 </form>
             </td>
